# otp-mfa

./: .gitignore  CMakeLists.txt  README.md  account_manager.cpp  account_manager.h  accounts.db  accounts.json  add_account.ui  add_account_dialog.cpp  add_account_dialog.h  encrypted_storage.cpp  encrypted_storage.h  encryption_utils.cpp  encryption_utils.h  install_dependencies.sh  main.cpp  master_password_dialog.cpp  master_password_dialog.h  master_password_dialog.ui  otp_generator.cpp  otp_generator.h  otp_generator_test.cpp  otp_window.cpp  otp_window.h  otp_window.ui  password_dialog.cpp  password_dialog.h  password_dialog.ui  qr_generator.cpp  qr_generator.h  recovery_manager.cpp  recovery_manager.h  screenshot_tool.cpp  screenshot_tool.h  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  start.sh
installer_files/config/: config.xml
installer_files/translations/: installer_ru.ts
